src/objects/blng__PaymentRun__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__ApexJobIdForCleanUp__c</fullName>
        <label>Apex Job Id (Clean Up)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__CleanUpStatus__c</fullName>
        <label>End Payment Run Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentRunCleanUpStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CompletedTime__c</fullName>
        <description>Invoice run completed  time</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__FailedTransactions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Failed Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__InvoicesProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoices Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__PaymentGateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Gateway</label>
        <referenceTo>blng__PaymentGateway__c</referenceTo>
        <relationshipLabel>Payment Run</relationshipLabel>
        <relationshipName>PaymentRunGateway</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Scheduler</label>
        <referenceTo>blng__PaymentScheduler__c</referenceTo>
        <relationshipLabel>Payment Runs</relationshipLabel>
        <relationshipName>PaymentSchedulerPaymentRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentRunStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__SuccessfulTransactions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Successful Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TotalPaymentProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Payment Processed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TransactionsGenerated__c</fullName>
        <formula>blng__FailedTransactions__c +  blng__SuccessfulTransactions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transactions Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Run</label>
    <nameField>
        <label>Payment Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>